--- a/sass/components/_social-media-icons.scss
+++ b/sass/components/_social-media-icons.scss
@@ -3,34 +3,35 @@
   margin-top: 16px;
   gap: 10px;
   justify-content: center;
+
+  &:hover,
+  &:focus {
+    color: $brand-white;
+    background-color: $action-color;
+    outline: none;
+  }
+
+  &_icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: $brand-grey-svg-icons;
+
+    transition-property: color, background-color;
+    transition-duration: $defaultTransitionDuration;
+    transition-timing-function: $defaultTransitionTiming;
+
+    &--footer {
+      margin-left: 0px;
+      color: $brand-white;
+      background-color: $social-media-footer-color;
+    }
+  }
 }
 
-.social-media-box a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  color: var(--brand-grey-svg-icons);
-
-  transition-property: color, background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-box a {
-  margin-left: 0px;
-  color: var(--brand-white);
-  background-color: var(--social-media-footer-color);
-}
 .svg-currentcolor {
   fill: currentColor;
-}
-
-.social-media-box a:hover,
-.social-media-box a:focus {
-  color: var(--brand-white);
-  background-color: var(--action-color);
-  outline: none;
 }
