--- a/sass/utils/_globals.scss
+++ b/sass/utils/_globals.scss
@@ -50,3 +50,11 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  margin-bottom: 50px;
+}
