--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -9,6 +9,7 @@ $description-text-color: #757575;
 $border-bottom-header: #ececec;
 $showcase-bg: rgba(47, 48, 58, 0.4);
 $social-media-footer-color: rgba(255, 255, 255, 0.1);
+$footer-contact: rgba(255, 255, 255, 0.6);
 $brand-grey-svg-icons: #afb1b8;
 $overlay: rgba(33, 150, 243, 0.9);
 $work-photos: rgba(47, 48, 58, 0.8);
