--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -62,3 +62,51 @@
     outline: none;
   }
 }
+
+.button-newsletter {
+  background-color: $action-color;
+  color: $brand-white;
+  min-width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  border-style: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  &_singup {
+    padding: 10px 24px 10px 0px;
+  }
+}
+
+.button-offer {
+  border-style: none;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  cursor: pointer;
+  letter-spacing: 0.03em;
+  font-family: 'roboto';
+  background-color: $section-color;
+  color: $main-text-color;
+  padding: 8px 22px;
+
+  transition-property: color, background-color, box-shadow;
+  transition-duration: $defaultTransitionDuration;
+  transition-timing-function: $defaultTransitionTiming;
+
+  &:hover,
+  &:focus {
+    color: $brand-white;
+    background-color: $action-color;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 1, 2, 0.08),
+      0px 3px 1px rgba(0, 0, 0, 0.1);
+    outline: none;
+  }
+}
