--- a/sass/utils/_globals.scss
+++ b/sass/utils/_globals.scss
@@ -23,15 +23,14 @@ p {
   padding: 0px;
 }
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
 img {
   display: block;
   max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 ul,
@@ -41,14 +40,15 @@ ol {
   margin: 0;
 }
 
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 section {
   padding-top: 94px;
   padding-bottom: 94px;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
 }
 
 .section-title {
@@ -57,4 +57,17 @@ a {
   line-height: 1.17;
   text-align: center;
   margin-bottom: 50px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
