--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,15 @@
 @import './utils/vars';
 @import './utils/globals';
 
-@import './components/header.scss';
-@import './components/footer';
-@import './components/hero-section';
+@import './components/header';
 @import './components/buttons';
+@import './components/hero-section';
 @import './components/modal';
 @import './components/form';
 @import './components/atuts';
+@import './components/offer';
+@import './components/team';
+@import './components/social-media-icons';
+@import './components/clients';
+@import './components/portfolio';
+@import './components/footer';
