--- a/sass/components/_social-media-icons.scss
+++ b/sass/components/_social-media-icons.scss
@@ -4,12 +4,6 @@
   gap: 10px;
   justify-content: center;
 
-  &:hover,
-  &:focus {
-    color: $brand-white;
-    outline: none;
-  }
-
   &_icon {
     display: flex;
     justify-content: center;
@@ -31,8 +25,8 @@
 
     &:focus,
     &:hover {
-      color: var(--brand-white);
-      background-color: var(--action-color);
+      color: $brand-white;
+      background-color: $action-color;
       outline: none;
     }
 
