--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -12,7 +12,7 @@ $social-media-footer-color: rgba(255, 255, 255, 0.1);
 $footer-contact: rgba(255, 255, 255, 0.6);
 $brand-grey-svg-icons: #afb1b8;
 $overlay: rgba(33, 150, 243, 0.9);
-$work-photos: rgba(47, 48, 58, 0.8);
+$offer-photos: rgba(47, 48, 58, 0.8);
 $backdrop-color: rgba(0, 0, 0, 0.2);
 $close-button-border: rgba(0, 0, 0, 0.1);
 $modal-form-label: rgba(117, 117, 117, 1);
